<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="number">Number</string>
    <string name="add">ADD</string>
    <string name="blank">""</string>
    <string name="x2">x\u00B2+</string>
    <string name="x">x+</string>
    <string name="eq0">=0</string>
    <string name="compute">compute</string>
    <string name="compute_delta">compute delta</string>

    <string name="result1">The constant equation.</string>
    <string name="result2">The linerar equation has one root. The root is:\u0020</string>
    <string name="result3">The quadratic equation has no roots.\nThe square determinant equals\u0020</string>
    <string name="result4a">The quadratic equation has one root. \nThe root equals\u0020</string>
    <string name="result4b"> The square determinant equals\u0020</string>
    <string name="result5a">The quadratic equation has two roots.\nThe first root equals\u0020</string>
    <string name="result5b">, the second root equals\u0020</string>
    <string name="result5c"> The square determinant equals\u0020</string>
    <string name="conflict">Conflict</string>
    <string name="google">Google</string>
    <string name="map">Map</string>
    <string name="phone">Phone</string>
    <string name="normal">Normal</string>
    <string name="blur">Blur</string>
    <string name="emboss">Emboss</string>
    <string name="clear">Clear</string>
    <string name="ChangeMode">Change Mode</string>
    <string name="red">Red: </string>
    <string name="green">Green: </string>
    <string name="blue">Blue: </string>
    <string name="confirm">Confirm</string>
    <string name="thickness">Thickness: </string>
    <string name="brushSettings">Brush Settings</string>
    <string name="oneCube">One Cube</string>
    <string name="twoCubes">Two Cubes</string>
    <string name="threeCubes">Three Cubes</string>
    <string name="play_video">Play Video</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="video1">Video 1</string>
    <string name="video2">Video 2</string>
    <string name="video3">Video 3</string>
    <string name="video4">Video 4 (Incorrect)</string>
    <string name="running">Running</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="ended">Ended</string>
    <string name="video">Video</string>
    <string name="loading">Loading</string>

    <string name="title_activity_task1">Task 1</string>
    <string name="title_activity_task2">Task 2</string>
    <string name="title_activity_task3">Task 3</string>
    <string name="title_activity_task4">Task 4</string>
    <string name="title_activity_task5">Task 5</string>
    <string name="title_activity_start_activity">Start_Activity</string>
    <string name="title_activity_second_activity">Second Activity</string>
</resources>