<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task5.MyYTPlayer"
    android:orientation="vertical">


    <view
        android:id="@+id/youtubePlayer"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtubePlayer" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pause"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/stop"
        app:layout_constraintTop_toBottomOf="@+id/pauseButton" />

    <TextView
        android:id="@+id/playerStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="18sp"
        android:layout_gravity="center" />

        <RadioGroup
            android:id="@+id/videoChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/v1radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/video1" />

            <RadioButton
                android:id="@+id/v2radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video2" />

            <RadioButton
                android:id="@+id/v3radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video3" />

            <RadioButton
                android:id="@+id/v4radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video4" />
        </RadioGroup>


</LinearLayout>

