<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ChangeMode"
    tools:context=".task4.Dice">

    <ImageView
        android:id="@+id/dice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@+id/dice3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/dice1_foreground" />

    <ImageView
        android:id="@+id/dice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="120sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice3"
        app:srcCompat="@mipmap/dice1_foreground" />

    <ImageView
        android:id="@+id/dice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="120sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/dice2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice1"
        app:srcCompat="@mipmap/dice1_foreground" />

    <ImageButton
        android:id="@+id/diceMenuButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_star" />

    <LinearLayout
        android:id="@+id/diceMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/diceMenuButton"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/diceOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneCube" />

        <Button
            android:id="@+id/diceOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twoCubes" />

        <Button
            android:id="@+id/diceOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/threeCubes" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>