<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/factor3EditText"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/equals0TextView2"
        app:layout_constraintStart_toEndOf="@+id/xTextView"
        app:layout_constraintTop_toBottomOf="@+id/AddBtn" />

    <TextView
        android:id="@+id/equals0TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/eq0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/factor3EditText"
        app:layout_constraintTop_toBottomOf="@+id/AddBtn" />

    <EditText
        android:id="@+id/factor2EditText"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/xTextView"
        app:layout_constraintStart_toEndOf="@+id/x2TextView"
        app:layout_constraintTop_toBottomOf="@+id/AddBtn" />

    <TextView
        android:id="@+id/xTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/x"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/factor3EditText"
        app:layout_constraintStart_toEndOf="@+id/factor2EditText"
        app:layout_constraintTop_toBottomOf="@+id/AddBtn" />

    <EditText
        android:id="@+id/Num1EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Num2EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Num1EditText" />

    <Button
        android:id="@+id/AddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Num2EditText" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/blank"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddBtn" />

    <EditText
        android:id="@+id/factor1EditText"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/x2TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddBtn" />

    <TextView
        android:id="@+id/x2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/x2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/factor2EditText"
        app:layout_constraintStart_toEndOf="@+id/factor1EditText"
        app:layout_constraintTop_toBottomOf="@+id/AddBtn" />

    <Button
        android:id="@+id/computeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/compute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xTextView" />

    <TextView
        android:id="@+id/equalResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computeBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>