<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task3.DrawActivity">

    <com.example.myfirstapp.task3.DrawView
        android:id="@+id/draw_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/colorThicknessPicker"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/pickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#46989191"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBarR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="255"
                android:progress="1" />

            <TextView
                android:id="@+id/seekBarRTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textAlignment="center" />

            <SeekBar
                android:id="@+id/seekBarG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="255"
                android:progress="1" />

            <TextView
                android:id="@+id/seekBarGTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:textAlignment="center" />

            <SeekBar
                android:id="@+id/seekBarB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="255"
                android:progress="1" />

            <TextView
                android:id="@+id/seekBarBTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textAlignment="center" />
            <View
                android:id="@+id/colorRewiev"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/cardview_dark_background"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/drawModeMenu"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        android:background="#664E4949"
        android:scrollbarSize="0dp"
        android:scrollbarStyle="insideOverlay"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/draw_view"
        app:layout_constraintStart_toStartOf="@+id/draw_view"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/modeMenuCloseButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/abc_vector_test" />

            <Button
                android:id="@+id/normalModeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/normal" />

            <Button
                android:id="@+id/blurModeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/blur" />

            <Button
                android:id="@+id/embossModeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/emboss" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>